<resources>
    <string name="app_name">Live Poker Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_delete">Delete</string>
    <string name="action_export">Export</string>
    <string name="action_settings">Settings</string>
    <string name="clear_database">Clear database</string>

    <string name="blinds_level">Blinds Level: </string>
    <string name="stack_size">Stack Size: </string>
    <string name="M">M: </string>
    <string name="players"># of Players: </string>

    <string-array name="players_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="session_type_array">
        <item>Tournoi MTT</item>
        <item>Cash game</item>
    </string-array>

    <string-array name="_hu_positions_array">
        <item>BB</item>
        <item>BU</item>
    </string-array>
    <string-array name="_3max_positions_array">
        <item>SB</item>
        <item>BB</item>
        <item>BU</item>
    </string-array>
    <string-array name="_4max_positions_array">
        <item>SB</item>
        <item>BB</item>
        <item>UTG</item>
        <item>BU</item>
    </string-array>
    <string-array name="_5max_positions_array">
        <item>SB</item>
        <item>BB</item>
        <item>UTG</item>
        <item>MP</item>
        <item>BU</item>
    </string-array>
    <string-array name="_6max_positions_array">
        <item>SB</item>
        <item>BB</item>
        <item>UTG</item>
        <item>MP</item>
        <item>CO</item>
        <item>BU</item>
    </string-array>
    <string-array name="_7max_positions_array">
        <item>SB</item>
        <item>BB</item>
        <item>UTG</item>
        <item>MP</item>
        <item>HJ</item>
        <item>CO</item>
        <item>BU</item>
    </string-array>
    <string-array name="_8max_positions_array">
        <item>SB</item>
        <item>BB</item>
        <item>UTG</item>
        <item>UTG+1</item>
        <item>MP</item>
        <item>HJ</item>
        <item>CO</item>
        <item>BU</item>
    </string-array>
    <string-array name="_9max_positions_array">
        <item>SB</item>
        <item>BB</item>
        <item>UTG</item>
        <item>UTG+1</item>
        <item>MP</item>
        <item>MP+1</item>
        <item>HJ</item>
        <item>CO</item>
        <item>BU</item>
    </string-array>
    <string-array name="_10max_positions_array">
        <item>SB</item>
        <item>BB</item>
        <item>UTG</item>
        <item>UTG+1</item>
        <item>MP</item>
        <item>MP+1</item>
        <item>MP+2</item>
        <item>HJ</item>
        <item>CO</item>
        <item>BU</item>
    </string-array>

    <string-array name="card_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>T</item>
        <item>J</item>
        <item>Q</item>
        <item>K</item>
        <item>A</item>
    </string-array>
    <string-array name="suit_array">
        <item>h</item>
        <item>s</item>
        <item>d</item>
        <item>c</item>
    </string-array>

    <string name="title_activity_session">Sessions</string>
    <string name="title_activity_form">Hands</string>

    <string name="dialog_choose_card">Choose card</string>

    <string name="id">Id</string>
    <string name="sb">SB</string>
    <string name="bb">BB</string>
    <string name="ante">Ante</string>
    <string name="amount">amount</string>

    <string name="save">Save</string>
    <string name="go_to_preflop">Validate</string>

    <string name="general_information">General Information</string>
    <string name="preflop_action">Preflop actions</string>
    <string name="flop_action">Flop actions</string>
    <string name="turn_action">Turn actions</string>
    <string name="river_action">River actions</string>
    <string name="showdown">"Showdown"</string>

    <string name="flop">"Flop: "</string>
    <string name="turn">"Turn: "</string>
    <string name="river">"River: "</string>

    <string name="position">My seat: </string>
    <string name="fold">Fold</string>
    <string name="check">Check</string>
    <string name="call">Call</string>
    <string name="bet">Bet</string>
    <string name="raise">Raise</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

</resources>
